<resources>
    <string name="app_name">Mi Calculadora</string>
    <string name="introduzca_el_primer_n_mero">Introduzca el primer número:</string>
    <string name="bienvenidos_a_mi_app_calculadora">Bienvenidos a mi APP Calculadora</string>
    <string name="introduzca_el_segundo_n_mero">Introduzca el segundo número:</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="mult">Mult</string>
    <string name="dividir">Dividir</string>
    <string name="el_resultado_de_la_operacion_es">El resultado de la operacion es:</string>
    <string name="n_mero">Número</string>
    <string name="Toast">Introduce los valores con los que vas a operar</string>
</resources>