<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TVbienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bienvenidos_a_mi_app_calculadora"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            />

        <ImageView
            android:id="@+id/IMGCalculadora"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:src="@mipmap/ic_launcher"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/TVprimerValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introduzca_el_primer_n_mero"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ETprimerValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_mero"
            android:paddingBottom="10dp"
            android:textSize="10sp"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/TVsegundoValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introduzca_el_segundo_n_mero"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ETsegundoValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_mero"
            android:paddingBottom="10dp"
            android:textSize="10sp"
            android:inputType="numberDecimal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSumar"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sumar"
                android:textSize="8sp"
                />

            <Button
                android:id="@+id/btnRestar"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/restar"
                android:textSize="8sp"
                />

            <Button
                android:id="@+id/btnMultiplicar"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mult"
                android:textSize="8sp"
                />

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dividir"
                android:textSize="8sp"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/TVResultadoTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/el_resultado_de_la_operacion_es"
            android:textSize="16sp"
            android:paddingTop="15dp"
            />

        <TextView
            android:id="@+id/TVResultado"
            android:layout_width="match_parent"
            android:layout_height="326dp"
            android:paddingTop="15dp"
            android:textSize="20sp" />
    </LinearLayout>
</layout>



